Clean up sources